[package]
name = "hoyo-news-fetcher"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/hoyo-news-fetcher"

[lib]
name = "hoyo_news_fetcher"
path = "lib.rs"

# [[bin]]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
